[package]
name = "sandrs"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
panic = "abort"
strip = true
lto = true
opt-level = "z"
overflow-checks = true

[profile.release.package."*"]
overflow-checks = false

[dependencies]
nannou =  { version = "0.19.0", default-features = false }
num-derive = "0.4.2"
num-traits = "0.2.19"
