[package]
name = "sandrs"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://codeberg.org/Joshix/sandrs"
description = "Falling Pink Sand"

[profile.dev.package."*"]
opt-level = 3
overflow-checks = false

[profile.release]
codegen-units = 1
panic = "abort"
strip = true
lto = true
opt-level = "z"
overflow-checks = true

[profile.release.package."*"]
overflow-checks = false

[dependencies]
